[package]
name = "isucondition"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.0-beta.6"
actix-http = "3.0.0-beta.9"
actix-multipart = "0.4.0-beta.5"
actix-session = "0.5.0-beta.2"
actix-web = "4.0.0-beta.8"
bytes = "1"
chrono = "0.4"
env_logger = "0.9"
futures = "0.3"
jsonwebtoken = "7"
lazy_static = "1"
listenfd = "0.3"
log = "0.4"
mime = "0.3"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.5", default-features = false, features = ["macros", "runtime-actix-rustls", "mysql", "chrono"] }
tokio = { version = "1", features = ["fs", "process"] }
